hard-gists/3668591/run.log
=== Docker Run Log for 3668591 ===
Started at: Mi 29. Okt 13:55:41 CET 2025

[2025-10-29 13:55:41] START: Running container for 3668591
[2025-10-29 13:55:42] SUCCESS: Container be715e7c9d90660458307e1f7d7e3484f686daba184b6f71e7cf665552ab5a1d started for 3668591
=== Container logs for 3668591 ===
  File "/snippet.py", line 456
    except getopt.GetoptError, err: 
           ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 3668591 ===
[2025-10-29 13:55:44] INFO: Container be715e7c9d90660458307e1f7d7e3484f686daba184b6f71e7cf665552ab5a1d has stopped
